--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.5.10",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -17,6 +18,8 @@
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
     "helmet": "^7.0.0",
-    "pdfkit": "^0.13.0"
+    "pdfkit": "^0.13.0",
+    "qrcode": "^1.5.3",
+    "sqlite3": "^5.1.6"
   }
 }
