Arreglos varios de @signpdf

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@signpdf/placeholder-pdf-lib": "^3.2.4",
+    "@signpdf/placeholder-pdfkit010": "^3.2.4",
     "@signpdf/placeholder-plain": "^3.2.4",
     "@signpdf/signer-p12": "^3.2.4",
     "@signpdf/signpdf": "^3.2.4",
@@ -23,7 +24,7 @@
     "fs": "^0.0.1-security",
     "helmet": "^7.0.0",
     "node-forge": "^1.3.1",
-    "pdfkit": "^0.13.0",
+    "pdfkit": "^0.10.0",
     "qrcode": "^1.5.3",
     "sqlite3": "^5.1.6"
   }
