--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@signpdf/placeholder-pdfkit": "^3.2.4",
-    "@signpdf/signer-p12": "^3.2.4",
-    "@signpdf/signpdf": "^3.2.4",
     "adm-zip": "^0.5.10",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -21,7 +18,7 @@
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
     "helmet": "^7.0.0",
-    "node-forge": "^1.3.1",
+    "pdfkit": "^0.15.0",
     "qrcode": "^1.5.3",
     "sqlite3": "^5.1.6"
   }
