--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@signpdf/placeholder-plain": "^3.2.4",
+    "@signpdf/signer-p12": "^3.2.4",
+    "@signpdf/signpdf": "^3.2.4",
     "adm-zip": "^0.5.10",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
