--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fs": "^0.0.1-security",
     "helmet": "^7.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "pdfkit": "^0.15.0",
     "qrcode": "^1.5.3",
     "sqlite3": "^5.1.6"
